fix overflow

--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -14,6 +14,7 @@ a {
   margin: 0;
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth !important;
+  overflow-x: hidden;
 }
 h2 {
   color: $primary-blue;
